# ingestion-engine

./: .gitignore  LICENSE  README.md  output.tmp  pyproject.toml  pyrightconfig.json  pytest.ini
.github/workflows/: python-ci.yml
scripts/: ingestion-coordinator  ingestion-coordinator.ps1  load_secrets_and_run.ps1  load_secrets_and_run.sh  print_settings.py  run_coordinator_no_persist.py  test_reddit_run.py
src/cli/: __init__.py  coordinator.py
src/config/: settings.py
src/core/: coordinator.py  models.py
src/ingestion/strategies/: base_strategy.py  reddit_strategy.py
src/storage/: gcs_client.py
tests/: conftest.py  test_coordinator.py  test_gcs_client.py  test_integration_gcs_and_reddit.py  test_integration_with_mocks.py  test_models.py  test_reddit_run.py  test_reddit_strategy.py
tests/mocks/: mock_gcs_client.py  mock_reddit_strategy.py
