[project]
name = "foresight_engine"
version = "0.1.0"
description = "A data ingestion engine for monitoring online sources."
requires-python = ">=3.9"
dependencies = [
    "feedparser",
    "yt-dlp",
    "praw",
    "python-dotenv",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
namespaces = true

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
    "pytest-asyncio",
    "anyio",
    "types-requests",  # example of type stubs
    "google-cloud-storage",
    "praw"
]